--- a/index.html
+++ b/index.html
@@ -1,121 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Toy Controller</title>
-<style>
-body {
-  font-family: Arial;
-  background: #111;
-  color: white;
-  text-align: center;
-}
-button {
-  font-size: 18px;
-  padding: 10px;
-  margin: 5px;
-}
-input[type=range] {
-  width: 80%;
-}
-input[type=number] {
-  width: 60px;
-  font-size: 18px;
-}
-.section {
-  margin: 25px;
-}
-</style>
-</head>
-
-<body>
-
-<h2>Toy Controller</h2>
-
-<button onclick="connect()">Connect</button>
-
-<div class="section">
-  <h3>Rotation</h3>
-  <input type="range" min="0" max="100" value="50" id="rotSlider">
-  <br>
-  <button onclick="sendRotation()">Send</button>
-</div>
-
-<div class="section">
-  <h3>Vibration</h3>
-  <input type="range" min="0" max="100" value="50" id="vibSlider">
-  <br>
-  <button onclick="sendVibration()">Send</button>
-</div>
-
-<div class="section">
-  <h3>Suction</h3>
-  Speed:
-  <input type="range" min="0" max="100" value="50" id="sucSlider">
-  <br><br>
-  ON:
-  <input type="number" id="onTime" value="5">
-  sec
-  OFF:
-  <input type="number" id="offTime" value="5">
-  sec
-  <br><br>
-  <button onclick="startSuction()">Start Suction</button>
-</div>
-
-<div class="section">
-  <button onclick="stopAll()">STOP ALL</button>
-</div>
-
-<script>
-
-let device;
-let characteristic;
-
-async function connect() {
-
-  device = await navigator.bluetooth.requestDevice({
-    filters: [{ name: 'ToyController' }],
-    optionalServices: ['1234']
-  });
-
-  const server = await device.gatt.connect();
-  const service = await server.getPrimaryService('1234');
-  characteristic = await service.getCharacteristic('5678');
-
-  alert("Connected!");
-}
-
-function sendCommand(cmd) {
-  const encoder = new TextEncoder();
-  characteristic.writeValue(encoder.encode(cmd));
-}
-
-function sendRotation() {
-  const value = document.getElementById("rotSlider").value;
-  sendCommand("R" + value);
-}
-
-function sendVibration() {
-  const value = document.getElementById("vibSlider").value;
-  sendCommand("V" + value);
-}
-
-function startSuction() {
-
-  const speed = document.getElementById("sucSlider").value;
-  const on = document.getElementById("onTime").value;
-  const off = document.getElementById("offTime").value;
-
-  sendCommand("S" + speed);
-  sendCommand("T" + on + "," + off);
-}
-
-function stopAll() {
-  sendCommand("X");
-}
-
-</script>
-
-</body>
-</html>
+<h1 style="color:red;">TEST VERSION</h1>
