--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1 style="color:red;">TEST VERSION</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body style="font-family:sans-serif; text-align:center; margin-top:50px;">
+
+<h1>Click Test</h1>
+
+<button id="btn" style="font-size:24px; padding:20px;">
+PRESS ME
+</button>
+
+<script>
+document.getElementById("btn").addEventListener("click", function() {
+  alert("Button works");
+});
+</script>
+
+</body>
+</html>
